--- a/localization/english/cultures_l_english.yml
+++ b/localization/english/cultures_l_english.yml
@@ -46,7 +46,7 @@
   beneluxian_culture_group: "Low Countries"
   bengali: "Bengali"
   maghrebi: "Maghrebi"
-  bihari: "Bihari"
+  bihari: "Maithili"
   boer: "Afrikaner"
   bornean: "Bornean"
   bosniak: "Bosniak"
@@ -227,7 +227,7 @@
   shona: "Shona"
   siberian: "Siberian"
   sidama: "Sidama"
-  sindi: "Sindi"
+  sindi: "Sindhi"
   sinhala: "Sinhala"
   slovak: "Slovak"
   slovene: "Slovene"
