--- a/localization/english/names_l_english.yml
+++ b/localization/english/names_l_english.yml
@@ -13584,7 +13584,7 @@
   Sarkis: "Sarkis"
   Sarkotic: "Sarkotic"
   Sarksyan: "Sarksyan"
-  Sarmaniego_del_Castillo: "Sarmaniego del Castillo"
+  Sarmaniego_del_Castillo: "Samaniego del Castillo"
   Sarmento: "Sarmento "
   Sarmineto: "Sarmineto"
   Sarnin: "Sarnin"
